--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
           taille: "112 x 55 cm",
           details: "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>PLUS DISPONIBLE.",
           description:
-            "Cette toile qui m'a fait douter durant quasiment tout le processus de sa création. Elle m'a frustré, m'a attrapé les entrailles et les a serré pendant de longues heures, elle m'a donné envie de me dire qu'elle serait la dernière. Puis elle m'a laissé faire et j'ai pu libérer la violence de mon amour non sans peser chacun de mes gestes.",
+            "Cette toile qui m'a fait douter durant quasiment tout le processus de sa création. Elle m'a frustré, m'a attrapé les entrailles et les a serrées pendant de longues heures, elle m'a donné envie de me dire qu'elle serait la dernière. Puis elle m'a laissé faire et j'ai pu libérer la violence de mon amour non sans peser chacun de mes gestes.",
           images: [
             "/images/netastral/Netastral_01.avif",
             "images/netastral/Netastral_02.avif",
@@ -655,7 +655,7 @@
           taille: "136 x 51 cm",
           details: "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
           description:
-            "Être complémentaires est une évidence pour ceux qui la vivent et qui échappe parfois à ceux qui la regardent",
+            "Être complémentaires est une évidence pour ceux qui la vivent, et qui échappe parfois à ceux qui la regardent",
           images: [
             "images/Coulamenta/Coulementa_1_uni.avif",
             "images/Coulamenta/Coulementa_2_uni.avif",
@@ -796,7 +796,7 @@
           taille: "81 x 60 cm",
           details: "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
           description:
-            "Regarde et laisse toi porter. Si tu te perds, prend du recul. Un symbole unique peut cacher une infinité d'images.",
+            "Regarde et laisse-toi porter. Si tu te perds, prend du recul. Un symbole unique peut cacher une infinité d'images.",
           images: [
             "images/L04ding/L04ding_uni.avif",
             "images/L04ding/L04ding_03.avif",
@@ -833,7 +833,7 @@
           taille: "100 x 81 cm",
           details: "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
           description:
-            "Dis moi ce que tu vois et je te dirai à quel point tu es fou.",
+            "Dis-moi ce que tu vois et je te dirai à quel point tu es fou.",
           images: [
             "images/Rortach/Rortach_uni.avif",
             "images/Rortach/Rortach_dt.avif",
@@ -870,7 +870,7 @@
           details:
             "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>COLLECTION PRIVÉE.",
           description:
-            "Immortalider sa mortalité et se tenir face au témoin d'un souvenir inaltérable",
+            "Immortaliser sa mortalité et se tenir face au témoin d'un souvenir inaltérable",
           images: [
             "images/labri40/labri_00.avif",
             "images/labri40/labri_01.avif",
