--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               >À propos</a
             >
             <a
-              href="https://www.instagram.com/pytinabubble"
+              href="https://www.instagram.com/pyt_art"
               target="_blank"
               class="text-[10px] uppercase tracking-[0.3em] text-gray-400 hover:text-black transition-colors"
               >Instagram</a
