--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
         },
         {
           id: "pyt_2023_002",
-          enAttente: true,
+          enAttente: false,
           ref: "PYT-2023-002",
           titre: "Le Paysage des Possibles",
           taille: "116 x 81 cm",
