miroir interieur true

--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
         },
         {
           id: "pyt_2020_004",
-          enAttente: true,
+          enAttente: false,
           ref: "PYT-2020-004",
           titre: "Miroir Intérieur",
           taille: "55 x 46 cm",
