miroir interieur correction

--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
           ref: "PYT-2020-004",
           titre: "Miroir Intérieur",
           taille: "55 x 46 cm",
-          details: "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
+          details: "PIÈCE UNIQUE. ACRYLIQUE SUR COTON. DISPONIBLE.",
           description:
             "Il existe une frontière d'argent, un visage buriné par le regard du monde. C’est l’armure nécessaire, la vérité des autres gravée dans la matière.<br><br>Pourtant, une faille s’ouvre et s'illumine. Un souffle rose vient déchirer l'impassible argent : c’est la vérité de soi, ce battement vital qui ne demande qu'à respirer.<br><br>Car l'un ne va pas sans l'autre : l'armure donne une forme au souffle, le souffle donne une âme à l'armure. Nous sommes cet équilibre permanent : un dialogue entre l’ombre métallique de la façade et la lumière incandescente du cœur.<br><br>Rien n'est à effacer, tout est à embrasser. Dans ce miroir, la vérité est entière parce qu'elle est double.",
           images: [
