ordre et impulsion

--- a/index.html
+++ b/index.html
@@ -913,6 +913,23 @@
           ],
           dateAjout: "2020-12-30",
         },
+        {
+          id: "pyt_2021_001",
+          enAttente: false,
+          ref: "PYT-2021-001",
+          titre: "L'ordre et L'impulsion",
+          taille: "55 x 46 cm",
+          details: "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
+          description:
+            "Il existe un ordre solide qui impose son rythme à l'espace. C'est la contrainte : le cadre de la vie et les règles du jeu que l'on ne choisit pas. Dans ces sillons se lisent les lois physiques, les marées, ou la croissance d'un arbre évoquant patience et répétition. La matière cuivrée semble vibrer d'un rythme lent et profond, celui de la Terre qui tourne, indifférente aux agitations humaines.<br><br>Le Cri de la Révolte. Pourtant, au cœur de cet ordre si solide qu'il semble figé, surgit la rupture. Elle ne demande pas la permission pour exister ; c’est la vie qui s’impose : malgré les structures qui nous entourent, il reste toujours une place pour l'imprévisible, pour le cri ou pour la danse.<br><br>L'impulsion a besoin de l'ordre pour être une révolte.<br><br>Dans un monde de cercles, la ligne droite devient un acte politique. Elle traverse, elle déborde, elle s'impose comme une preuve d'existence immédiate. Sans la rigueur de ces sillons, le geste ne serait qu'une trace ; contre eux, il devient une affirmation. La révolte est la seule chose capable de remettre le monde en mouvement.",
+          images: [
+            "images/L'ordre et L'impulsion/lordreetlimpulsion_01.avif",
+            "images/L'ordre et L'impulsion/lordreetlimpulsion_02.avif",
+            "images/L'ordre et L'impulsion/lordreetlimpulsion_03.avif",
+            "images/L'ordre et L'impulsion/lordreetlimpulsion_04.avif",
+          ],
+          dateAjout: "2021-01-02",
+        },
       ];
       // === FIN DES DONNEES ===
 
