--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
             "images/Sanmourai/2020_Sanmourai_uni.avif",
             "images/Sanmourai/2020_sanmourai_4.avif",
             "images/Sanmourai/2020_sanmourai_5.avif",
-            "images/Sanmourai/2020_Sanmourai_6.jpg",
+            "images/Sanmourai/2020_Sanmourai_6.avif",
           ],
           dateAjout: "2020-12-13",
         },
