--- a/index.html
+++ b/index.html
@@ -569,7 +569,8 @@
           ref: "PYT-2020-002",
           titre: "L'Enclave",
           taille: "55 x 46 cm",
-          details: "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>COLLECTION PRIVÉE.",
           description:
             "Le noir a enveloppé le monde, nous isolant dans des périmètres imposés. Face à ce vide soudain, il a fallu créer nos propres lieux d'apaisement, nichés au cœur d'une géométrie protectrice mais abrasive.<br><br>On a frotté nos vies contre ce vide, et la forme qui en est ressortie est différente.<br><br>De ce face-à-face, personne n'est ressorti intact. Entre épreuve de friction pour les uns et refuge rassurant pour les autres, l’enclave a agi comme une métamorphose. Mais alors que les digues cèdent et que nous retrouvons le chaos, celui-ci semble plus vorace, plus violent qu'autrefois. Comme si l'immobilité n'avait été qu'une accumulation de faim.<br><br>Face à ce nouveau tumulte, que reste-t-il de nos enclaves ?",
           images: ["images/L'Enclave/2020_lenclave.avif"],
