--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
           details:
             "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>COLLECTION PRIVÉE.",
           description:
-            "Le noir a enveloppé le monde, nous isolant dans des périmètres imposés. Face à ce vide soudain, il a fallu créer nos propres lieux d'apaisement, nichés au cœur d'une géométrie protectrice mais abrasive.<br><br>On a frotté nos vies contre ce vide, et la forme qui en est ressortie est différente.<br><br>De ce face-à-face, personne n'est ressorti intact. Entre épreuve de friction pour les uns et refuge rassurant pour les autres, l’enclave a agi comme une métamorphose. Mais alors que les digues cèdent et que nous retrouvons le chaos, celui-ci semble plus vorace, plus violent qu'autrefois. Comme si l'immobilité n'avait été qu'une accumulation de faim.<br><br>Face à ce nouveau tumulte, que reste-t-il de nos enclaves ?",
+            "Le noir est le silence, nous enfermant dans des enclaves imposées. Dans ce vide, on s'est bricolé des abris, des coins de calme un peu rudes, un peu étranges.<br><br>On a frotté nos vies contre ce vide jusqu'à se sculpter à nouveau. Et la forme qui en est sortie est différente.<br><br>Personne n'a survécu à ce face-à-face sans y laisser des plumes. Pour certains, c'était une prison ; pour d'autres, une planque. Mais aujourd'hui que tout craque et que le bordel revient, il semble plus agressif, plus affamé qu'avant. Comme si tout ce temps immobile n'avait fait que nourrir une bête.<br><br>Face à cette bête, que reste-t-il de nos enclaves ?",
           images: ["images/L'Enclave/2020_lenclave.avif"],
           dateAjout: "2020-12-26",
         },
@@ -889,7 +889,7 @@
           taille: "116 x 81 cm",
           details: "PIÈCE UNIQUE. ACRYLIQUE SUR COTON. DISPONIBLE.",
           description:
-            "Rien n'est statique, tout semble fluide... Les couleurs éclatantes font cohabiter le jour et la nuit, la joie et le mystère.<br><br>C'est une invitation au voyage intérieur, une transition de l'être. Que l'on soit voyageur ou flâneur, c'est le mouvement qui compte, bien plus que l'arrivée.<br><br>Où seriez-vous en ce moment ?<br><br>Au seuil du chemin coloré, dans l'élan du départ ?<br><br>À l'abri de l'arbre, observant le paysage avant de vous lancer ?<br><br>Face au tunnel, prêt à embrasser l'inconnu ?<br><br>Ou déjà égaré dans les tourbillons d'azur ?<br><br>Le Paysage des Possibles n'est pas une destination, c'est une métamorphose. Regardez l'horizon : ce qui s'annonce derrière est un monde de courbes, de plénitude et de silence.",
+            "Ici, rien ne tient en place. Le jour et la nuit se percutent, la joie se mêle au mystère dans un même éclat de couleurs.<br><br>C’est moins un décor qu'une transition. Que l'on soit du genre à foncer ou à flâner, c’est le vertige du mouvement qui compte, bien plus que l’arrivée.<br><br>Et vous, où seriez-vous dans ce chaos ?<br><br>Au seuil du chemin, dans l'adrénaline du départ ?<br><br>Planqué sous l'arbre, à observer avant de vous lancer ?<br><br>Face au tunnel, prêt à embrasser l'inconnu ?<br><br>Ou déjà perdu, tête la première, dans ces tourbillons d'azur ?<br><br>C’est cela, Le Paysage des Possibles. Ce n'est pas une destination, c'est un basculement. Regardez l'horizon : ce qui s'annonce derrière est un monde de courbes, de plénitude et de silence.",
           images: [
             "images/lepaysagedespossibles/lepaysagedespossibles_01.avif",
             "images/lepaysagedespossibles/lepaysagedespossibles_02.avif",
